# subnet-organic

./: README.md  app.py  datatypes.py  dependencies.py  pyproject.toml  requirements.txt  setup.py  utils.py
condenses_organic/: server.py  taostats_api.py
ncs_cli/: cli.py
proxy_server/: Dockerfile  app.py  datatypes.py  dependencies.py  docker-compose.yml  requirements.txt  utils.py
